      to qmake. Due to the qt4-mac's changes, we do not automatically get
      these values automatically "appended" in a usable way anymore.
    - x2gosettings.cpp: let centralSettings () return false on Windows.
    - onmainwindow.cpp: be more precise in slotScDaemonError () regarding
      unknown and undefined errors.

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.5.1):
    - xsettingswidget: compile only on Windows.
    - Add support for new style command line options of xfreerdp on direct RDP
      connections. (Fixes: #772).
    - Replace "::" with "_" for the desktop link name on Windows.
    - Fix direct RDP in broker mode.
    - Fix crashing client when editing session from SessionManageDialog.
    - Configure audio input in pulseaudio on Windows.
    - Reconnect ssh broker in case of IO Error.
    - Reformat source onmainwindow.cpp.
    - Disable settings editing if a directory with central settings is exists.
    - Format long names on session buttons.
    - Central settings for Linux, Mac and Windows.

  [ Mike Gabriel ]
  * New upstream release (4.0.5.1):
    - xinerama.conf: Don't choke if screen coordintate lines in xinerama.conf
      start with a dash ("-"). (Fixes: #948).

  [ Mike DePaulo ]
  * New upstream release (4.0.5.1):
    - Windows: Update bundled Win32 OpenSSL from 1.0.1p to 1.0.1q,
      which fixes the multiple CVEs announced on 2015-12-03.

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 28 Jul 2015 06:05:27 +0200

x2goclient (4.0.5.0-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.0):
    - INSTALL: add more verbose instructions on how to build X2Go Client and
      friends.
    - onmainwindow.{cpp,h}: rename slotScDaemonOut() and slotScDaemonError()
      to slotScDaemonStdOut() and slotScDaemonStdErr(). I will need
      slotScDaemonError() later and the previous names were a bit of a
      misnomer.
    - x2goutils.{cpp,h}: add new show_RichText_Generic_MsgBox() main function